<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/wifi_setup_Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_overlay">

    <TextView
        android:id="@+id/wifi_setup_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="30dp"
        android:textColor="#ffffffff"
        android:text="@string/SelectNetwork" />

    <ListView
        android:id="@+id/wifi_setup_ListView"
        android:layout_width="600dp"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/wifi_setup_TextView"
        android:layout_above="@+id/wifi_setup_Button_Group"/>

    <LinearLayout
        android:id="@+id/wifi_setup_Button_Group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/wifi_setup_scan_ImageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/stat_sys_wifi_signal_0"
            />
        <Button
            android:id="@+id/wifi_setup_Button_rescan"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/init_button_seletcor"
            android:textColor="#ffffffff"
            android:text="@string/Rescan"/>
        <Button
            android:id="@+id/wifi_setup_Button_manual"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:background="@drawable/init_button_seletcor"
            android:textColor="#ffffffff"
            android:layout_marginLeft="20dp"
            android:text="@string/ManualWifiSetup"/>
    <!--    <Button
            android:id="@+id/wifi_setup_Button_skip"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:background="@drawable/init_button_seletcor"
            android:layout_marginLeft="20dp"
            android:text="@string/Back"/>-->
    </LinearLayout>

</RelativeLayout>